Changed Base64.getEncoder() DatatypeConverter.printBase64Binary()